--- a/source/src_scss/global/_misplaced.scss
+++ b/source/src_scss/global/_misplaced.scss
@@ -41,7 +41,7 @@ html {
 
 body{
   font-family: $font;
-  color: #5f5f5f;
+  color: #222;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
