--- a/source/src_scss/pages/_2016Orientation.scss
+++ b/source/src_scss/pages/_2016Orientation.scss
@@ -260,6 +260,7 @@ overflow: hidden
 }
 .navbar--fixed__links {
   @extend .navbar-nav;
+  margin: 0 !important;
 }
 .navbar--fixed__header {
   @extend .navbar-header;
