Update to student orientation guide.

--- a/source/_patterns/04-pages/StudentOrientationFinal2016.mustache
+++ b/source/_patterns/04-pages/StudentOrientationFinal2016.mustache
@@ -323,6 +323,7 @@ Fixed position will be removed when back to the top of the page.
 ============================================================================ -->
 
 
+
 <!-- ===================================================================
 
 ** Where to get help section **
@@ -376,6 +377,23 @@ Fixed position will be removed when back to the top of the page.
   </div>
 </section>
 
+<section class="bg-black cozy">
+  <div class="container">
+    <div class="row">
+      <div class="display--flex">
+        <div class="col-md-6">
+          <h2 class="white">Win prizes by visiting DoIT's Student Technology table at the 2016 freshman orientation!</h2>
+        </div>
+        <div class="col-md-6">
+          <div class="youtube-container">
+            <div class="youtube-player" data-id="W0qgj29m1n0"></div>
+            <p class="font-alt white">Watch this video to find out more about the prizes you can win.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  <div>
+</section>
 <!-- ===========================================================================
 
 ** Slideout Panels Content **
