horizontal card fix

--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -15,6 +15,7 @@
 @import "cards/simple-blurb-card";
 @import "cards/polaroid-card";
 @import "cards/event-card";
+@import "cards/horizontal-card-img";
 @import "cards/link-card";
 @import "cards/list-card";
 @import "cards/reveal-card";
