Added two-column layout page template with sidebar. Sidebar collapses to select dropdown menu with some custom stylings.

--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -35,4 +35,5 @@
 @import "navigation/pager";
 
 @import "navigation/sbu-bootstrap-sitenav";
+@import "navigation/sidebar";
 @import "navigation/social-links";
