General updates to homepage layout.

--- a/source/_patterns/03-templates/04-Two-Column-Layout.mustache
+++ b/source/_patterns/03-templates/04-Two-Column-Layout.mustache
@@ -40,26 +40,27 @@
           </ul>
           <div class="sidebar-dropdown">
             <select class="arrow">
-              <option value="">Published Policies List</option>
-              <option value="">(P109) Appropriate Use of Information Technology</option>
-              <option value="/policies/use-of-cable-television" title="">Policy on Use of Cable Television</option>
-              <option value="/policies/d100" title="">(D100) Access to Institutional Data</option>
-              <option value="/policies/d101" title="">(D101) Classification and Use of Information Assets</option>
-              <option value="/policies/d102" title="">(D102) Network Security</option>
-              <option value="/policies/d103" title="">(D103) Server Security</option>
-              <option value="/policies/d104" title="">(D104) Workstation Security</option>
-              <option value="/policies/d105" title="">(D105) Credential Security</option>
-              <option value="/policies/d106" title="">(D106) Email</option>
-              <option value="/policies/d107" title="">(D107) Information Security Governance</option>
-              <option value="/policies/d108" title="">(D108) Information Security Program Roles and Responsibilities</option>
-              <option value="/policies/d109" title="">(D109) Personnel Security Policy</option>
-              <option value="/policies/d110" title="">(D110) Operational Management Policy</option>
-              <option value="/policies/d111" title="">(D111) Stony Brook University Google Apps for Education Acceptable Use and Data Security Policy</option>
-              <option value="/policies/d112" title="">(D112) Electronic Mail (Email) Retention Policy</option>
-              <option value="/policies/d120" title="">(D120) Web Resources</option>
-              <option value="/policies/d121" title="">(D121) Internet Videoconferencing and Virtual Meeting Rooms</option>
-              <option value="/policies/d123" title="">(D123) Domain Name Policy</option>
-              <option value="/policies/HEOA_compliance_plan" title="">Plan to Combat Unlawful Distribution of Copyrighted Materia</option>
+              <optgroup label="Published Policies List">
+                <option value="">(P109) Appropriate Use of Information Technology</option>
+                <option value="/policies/use-of-cable-television" title="">Policy on Use of Cable Television</option>
+                <option value="/policies/d100" title="">(D100) Access to Institutional Data</option>
+                <option value="/policies/d101" title="">(D101) Classification and Use of Information Assets</option>
+                <option value="/policies/d102" title="">(D102) Network Security</option>
+                <option value="/policies/d103" title="">(D103) Server Security</option>
+                <option value="/policies/d104" title="">(D104) Workstation Security</option>
+                <option value="/policies/d105" title="">(D105) Credential Security</option>
+                <option value="/policies/d106" title="">(D106) Email</option>
+                <option value="/policies/d107" title="">(D107) Information Security Governance</option>
+                <option value="/policies/d108" title="">(D108) Information Security Program Roles and Responsibilities</option>
+                <option value="/policies/d109" title="">(D109) Personnel Security Policy</option>
+                <option value="/policies/d110" title="">(D110) Operational Management Policy</option>
+                <option value="/policies/d111" title="">(D111) Stony Brook University Google Apps for Education Acceptable Use and Data Security Policy</option>
+                <option value="/policies/d112" title="">(D112) Electronic Mail (Email) Retention Policy</option>
+                <option value="/policies/d120" title="">(D120) Web Resources</option>
+                <option value="/policies/d121" title="">(D121) Internet Videoconferencing and Virtual Meeting Rooms</option>
+                <option value="/policies/d123" title="">(D123) Domain Name Policy</option>
+                <option value="/policies/HEOA_compliance_plan" title="">Plan to Combat Unlawful Distribution of Copyrighted Materia</option>
+              </optgroup>
             </select>
           </div>
         </div>
