--- a/source/src_scss/global/_misc.scss
+++ b/source/src_scss/global/_misc.scss
@@ -34,3 +34,22 @@
   display: flex;
   align-items: center;
 }
+
+.no-padding-right {
+  padding-right: 0 !important;
+}
+
+@media (max-width: 991px) {
+  .no-padding-mobile {
+    padding: 0 !important;
+  }
+  .no-margin-mobile {
+    margin: 0 !important;
+  }
+  .disable-container-mobile {
+    width: 100% !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+}
