--- a/source/src_scss/molecules/buttons/_bold-moves-button.scss
+++ b/source/src_scss/molecules/buttons/_bold-moves-button.scss
@@ -4,7 +4,7 @@
   position: relative;
   z-index: 10;
   overflow: hidden;
-  
+
   height: 360px;
   //background-color: #800000;
   background-image: url('http://stonybrook.edu/sb/far-beyond/img/branding/rays/red-rays-full.jpg');
@@ -42,6 +42,11 @@
     clear: both; }
 */
 
+@media (max-width: 1200px){
+  .bold-moves-box {
+    margin-bottom: 2em;
+  }
+}
 .bold-moves-box--title {
     display: block;
     width: 100%;
@@ -59,7 +64,7 @@
 .bold-moves-box--title h3 {
       display: block;
       color: #fff;
-      font-size: 2.8rem;
+      font-size: 2rem;
       font-weight: 700;
       text-transform: uppercase;
       max-height: 190px;
@@ -86,9 +91,9 @@
 
 .bold-moves-box--story p {
     color: #fff;
-    font-size: 2.3em;
+    font-size: 1.5em;
     padding: 28px 35px 0 40px;
-    line-height: 1.66;
+    line-height: 1.1em;
     z-index: 1;
     display: none;
     max-height: 175px;
