Updates to system status section and link-cards

--- a/source/_patterns/04-pages/Homepage-Redesign.mustache
+++ b/source/_patterns/04-pages/Homepage-Redesign.mustache
@@ -57,7 +57,7 @@
       </nav>
 
 <section class="bold-story gradient-overlay__topLeft">
-  <img class="" src="../../placeholders/images/bold-story.jpg">
+  <img class="" src="../../placeholders/images/orientation/redSwooshes.jpg">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -342,8 +342,6 @@ News & Events Sections
         </div>
       </div>
     </div>
-
-
     <div class="cozy">
       <ul class="pills-tabs">
         <li class="active"><a href="#tab_a" data-toggle="pill">Services</a></li>
@@ -352,21 +350,206 @@ News & Events Sections
       </ul>
       <div class="tab-content cozy">
         <div class="tab-pane active" id="tab_a">
-          <h4 class="heading">SERVICES</h4>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
-            ac turpis egestas.</p>
+          <h4 class="heading">SERVICES BY CATEGORY</h4>
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="link-card" data-match-height="hsc">
+              <h2 class="link-card--heading">Accounts and Passwords</h2>
+              <ul class="link-card link-card-item">
+                <li><a class=" " href="/services/netid">NetID</a></li>
+                <li><a class=" " href="/services/single-sign-on-sso">Single Sign On (SSO)</a></li>
+                <li><a class=" " href="/services/solar">SOLAR</a></li>
+              </ul>
+            </div>
+          </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Business Systems</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/accessvis">accessVIS</a></li>
+              <li><a class=" " href="/services/aleph">Aleph</a></li>
+              <li><a class=" " href="/services/cbase">CBase</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="tab-pane" id="tab_b">
-          <h4 class="heading">SYSTEM STATUS</h4>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
-          ac turpis egestas.</p>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc"  >
+            <h2 class="link-card--heading">Classrooms and Computer Labs</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/25live">25Live</a></li>
+              <li><a class=" " href="/services/sinc-sites">SINC Sites</a></li>
+              <li><a class=" " href="/services/classroom-finder">Classroom Finder</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="tab-pane" id="tab_c">
-          <h4 class="heading">SCHEDULED MAINTENANCE</h4>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
-          ac turpis egestas.</p>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc"  >
+            <h2 class="link-card--heading">Email and Collaboration</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/google-apps">Google Apps</a></li>
+              <li><a class=" " href="/services/electronic-post-office-epo">Electronic Post Office (EPO)</a></li>
+              <li><a class=" " href="/services/sharepoint-online">SharePoint Online</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Hardware</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/hardware/faculty-staff-computer-support">Faculty/Staff Computer Support</a></li>
+              <li><a class=" " href="/services/hardware/student-computer-support">Student Computer Support</a></li>
+              <li><a class=" " href="/services/hardware/mobile-device-support">Mobile Device Support</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Networking Phones and TV</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/wolfienet">WolfieNet</a></li>
+              <li><a class=" " href="/services/hbo-go">HBO GO</a></li>
+              <li><a class=" " href="/services/vpn">VPN</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Printing</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/printing">Printing</a></li>
+              <li><a class=" " href="/services/sinc-sites">SINC Sites</a></li>
+              <li><a class=" " href="/services/virtual-sinc-site">Virtual SINC Site</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Servers Storage and Backup</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/department-shared-folders">Department Shared Folders</a></li>
+              <li><a class=" " href="/services/mysbfiles">MySBfiles</a></li>
+              <li><a class=" " href="/services/virtual-servers">Virtual Servers</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Software</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/onthehubcom">OnTheHub.com</a></li>
+              <li><a class=" " href="/services/software-catalog">Software Catalog</a></li>
+              <li><a class=" " href="/services/faculty-staff-software-support">Faculty/Staff Software Support</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Support Services</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/audio-visual-services">Audio Visual Services</a></li>
+              <li><a class=" " href="/services/client-support-service-center">Client Support Service Center</a></li>
+              <li><a class=" " href="/services/itsm">ITSM (IT Service Management)</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Teaching and Learning Tools</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/blackboard">Blackboard</a></li>
+              <li><a class=" " href="/services/lynda">Lynda.com</a></li>
+              <li><a class=" " href="/services/office-365">Office 365</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="link-card" data-match-height="hsc">
+            <h2 class="link-card--heading">Web Services</h2>
+            <ul class="link-card link-card-item">
+              <li><a class=" " href="/services/sb-you">SB You</a></li>
+              <li><a class=" " href="/services/drupal-content-management-system">Drupal Content Management System</a></li>
+              <li><a class=" " href="/services/yammer">Yammer</a></li>
+            </ul>
+          </div>
         </div>
       </div>
+    </div>
+
+    <div class="tab-pane" id="tab_b">
+      <h4 class="heading">SYSTEM STATUS</h4>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="unity-table">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>System / Service</th>
+                <th class="text-right">Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>SOLAR</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>Blackboard</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>Google Apps</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>WolfieNet (Wi-Fi)</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>Network (Wired)</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>Talent Management System (TMS)</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>ITSM (Service Management</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>Telephone Systems</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>Virtual SINC Site</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>SB You<</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th>PeopleSoft</th>
+                <td class="text-right"><span class="system-status-bar--online-small">Online</td>
+              </tr>
+              <tr>
+                <th scope="row"><a href="#">View All System Status &raquo;</th>
+                <th scope="row" class="text-right"><a href="#">Report A Problem &raquo;</th>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+    <div class="tab-pane" id="tab_c">
+      <h4 class="heading">SCHEDULED MAINTENANCE</h4>
+      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
+      ac turpis egestas.</p>
     </div>
   </div>
 </section>
