--- a/source/src_scss/pages/homepage/_homepage-redesign.scss
+++ b/source/src_scss/pages/homepage/_homepage-redesign.scss
@@ -8,7 +8,7 @@
   border: 1px solid #ddd;
   background: #ddd;
   border-radius: 20px;
-  width: 137px;
+  width: 100%;
   padding-left: 10px;
   display: inline-block;
 }
@@ -532,5 +532,23 @@ Tabs as Pills
     &:focus {
       transition: .3s ease all;
     }
+  }
+}
+.system-status-bar--online-small {
+  @extend .system-status-bar--online;
+  margin-top: 0;
+  font-size: .8em;
+  padding: 5px 8px;
+}
+.unity-table {
+  table.table thead > tr > th {
+    padding: 1em 0;
+    border-bottom: 1px solid #ddd;
+  }
+  table.table > tbody > tr > th {
+    padding: 1em 0;
+  }
+  table.table > tbody > tr > td {
+    padding: 1em 0;
   }
 }
