split up homepage redesign mustache and sass into reusable components

--- a/source/src_scss/atoms/_base.scss
+++ b/source/src_scss/atoms/_base.scss
@@ -33,6 +33,7 @@
 @import "tables/simple-two-col-table";
 @import "tables/light-grey-table";
 @import "tables/pricing-table";
+@import "tables/unity-table";
 
 @import "text/headings";
 @import "text/links";
