--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -1,5 +1,6 @@
 @import "buttons/circle-band-button";
 @import "buttons/dual-tone-button";
+@import "buttons/event-stamp-button";
 @import "buttons/rounded-image-button";
 @import "buttons/promo-box-button";
 @import "buttons/bold-moves-button";
@@ -32,6 +33,8 @@
 @import "navigation/breadcrumbs";
 @import "navigation/footer-nav";
 @import "navigation/main-nav";
+@import "navigation/quick-nav";
+@import "navigation/unity-navbar";
 
 @import "navigation/pager";
 
