--- a/source/src_scss/atoms/text/_text.scss
+++ b/source/src_scss/atoms/text/_text.scss
@@ -101,3 +101,9 @@
     padding: 0 3px 0 0;
     letter-spacing: .025em;
 }
+
+.bold-introduction-text {
+  font-family: $font-alt;
+  font-size: 1.5em;
+  font-weight: 400;
+}
