--- a/source/_patterns/01-molecules/08-buttons/_6075-event-stamp-button.mustache
+++ b/source/_patterns/01-molecules/08-buttons/_6075-event-stamp-button.mustache
@@ -2,9 +2,9 @@
 
 <div class="event-stamp-button">
    <div class="display--flex-mobile">
-     <div class="event-stamp-button--date">
+     <div class="event-stamp-button--date" data-match-height="event-stamp-button">
        <time datetime="2016-09-01">
-         <span class="event-stamp-button--month">September</span>
+         <span class="event-stamp-button--month">SEPT</span>
          <span class="event-stamp-button--day">01</span>
        </time>
      </div>
