--- a/source/src_scss/molecules/buttons/_bold-moves-button.scss
+++ b/source/src_scss/molecules/buttons/_bold-moves-button.scss
@@ -1,13 +1,8 @@
 .bold-moves-box {
-
   background-size: cover;
   position: relative;
   z-index: 10;
   overflow: hidden;
-
-  height: 360px;
-  //background-color: #800000;
-  background-image: url('http://stonybrook.edu/sb/far-beyond/img/branding/rays/red-rays-full.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -15,32 +10,11 @@
   width: 100%;
   cursor: pointer;
   transition: all .5s ease;
-
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-
-//this is prefered height for tablet
-//    width: 50%;
-//    height: 420px; } }
-
-//this is height for desktop.
-  //width: 33.33%;
+  border-right: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   height: 420px;
-  max-width:750px;
-
+  max-width: 100%;
 }
-
-/*
-.boldMovesBox::after {
-    clear: both;
-    content: "";
-    display: table;
-}*/
-
-/*
-  .boldMovesBox:first-child {
-    clear: both; }
-*/
 
 @media (max-width: 1200px){
   .bold-moves-box {
@@ -48,33 +22,33 @@
   }
 }
 .bold-moves-box--title {
-    display: block;
-    width: 100%;
-    margin: 0 auto 0;
-    padding: 3rem 11% 1rem;
-    text-align: center;
-    text-decoration: none;
-    border-bottom: 0 none;
-    cursor: pointer;
-    height: 100%;
-    overflow: visible;
-    z-index: 1;
+  display: block;
+  width: 100%;
+  margin: 0 auto 0;
+  padding: 2em 1em;
+  text-align: center;
+  text-decoration: none;
+  border-bottom: 0 none;
+  cursor: pointer;
+  height: 100%;
+  overflow: visible;
+  z-index: 1;
 }
 
 .bold-moves-box--title h3 {
-      display: block;
-      color: #fff;
-      font-size: 2rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      max-height: 190px;
-      overflow: hidden;;
-      -webkit-line-clamp: 6;
-      -webkit-box-orient: vertical;
-      text-shadow: 0 0 8px rgba(0,0,0,0.7);
-      line-height: 1.1em;
-      word-spacing: 0.1em;
-      cursor: pointer;
+  display: block;
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  max-height: 190px;
+  overflow: hidden;;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  text-shadow: 0 0 8px rgba(0,0,0,0.7);
+  line-height: 1.1em;
+  word-spacing: 0.1em;
+  cursor: pointer;
 }
 
 
@@ -84,132 +58,69 @@
   width: 110%;
   height: 100%;
   z-index: 20;
-  -webkit-transform: rotate(-8deg) translate(5%, -8%);
-  -ms-transform: rotate(-8deg) translate(5%, -8%);
-  transform: rotate(-8deg) translate(5%, -8%);
+  transition: .3s ease all;
 }
 
 .bold-moves-box--story p {
-    color: #fff;
-    font-size: 1.5em;
-    padding: 28px 35px 0 40px;
-    line-height: 1.1em;
-    z-index: 1;
-    display: none;
-    max-height: 175px;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 6;
-    -webkit-box-orient: vertical;
-    font-weight: 400;
-    overflow: hidden;
+  color: #fff;
+  font-size: 1.5em;
+  padding: 28px 35px 0 40px;
+  line-height: 1.1em;
+  z-index: 1;
+  display: none;
+  max-height: 175px;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  font-weight: 400;
+  overflow: hidden;
 }
 
 .bold-moves-box--story p a {
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 
 
 .bold-moves-box--fullStory {
-    font-family: "Effra W01", Helvetica, sans-serif;
-    font-weight: 900;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    background: #000;
-    color: #fff;
-    font-size: 1.1rem;
-    padding: 0.5rem 0;
-    border: 2px solid #000;
-    padding: .4rem .5rem .6rem .6rem;
-    width: 39%;
-    display: block;
-    position: absolute;
-    bottom: 120px;
-    left: 40px;
-    z-index: 32;
+  font-family: "Effra W01", Helvetica, sans-serif;
+  font-weight: 900;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: $red;
+  color: #fff;
+  font-size: 1.1rem;
+  padding: 1.5rem 0;
+  border: 2px solid $red;
+  width: 100%;
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 2;
 }
 
 
 .bold-moves-box--fullStory:hover {
-    background: transparent;
-    border-color: #fff;
+  background: #D52027;
+  border-color: #D52027;
+  transition: .3s ease all;
 }
 
-
-.bold-moves-box--link {
-    display: block;
-    position: absolute;
-    bottom: 0.5rem;
-    right: 1rem;
-    z-index: 30;
-    color: #fff;
-    font-size: 1.25em;
-    text-decoration: none;
-    left: auto;
-    text-align: right;
-    padding: 5px 0;
-    border-bottom: 2px solid transparent;
-}
 
 .bold-moves-box--link:hover {
-    border-bottom: 2px solid #fff;
-    cursor: pointer;
-    color: #fff;
+  border-bottom: 2px solid #fff;
+  cursor: pointer;
+  color: #fff;
 }
 
-
-.bold-moves-box--link  {
-//    display: none;
-}
-
-.bold-moves-box--link .bold-moves-box--engaged-text {
-    display: none;
-}
-
-.bold-moves-box--link .bold-moves-box--disengaged-text {
-    display: inline;
-}
-
-
-
-
-//this is the triangles.
-.bold-moves-box:nth-child(3) .bold-moves-box--story,
-.bold-moves-box:nth-child(7) .bold-moves-box--story {
-    background: maroon;
-    border-top: 12px solid #d52027;
-}
-
-.bold-moves-box:nth-child(5) .bold-moves-box--story,
-.bold-moves-box:nth-child(6) .bold-moves-box--story {
-    background: maroon;
-    border-top: 6px solid #d52027;
-}
-
-.bold-moves-box:nth-child(4) .bold-moves-box--story,
-.bold-moves-box:nth-child(8) .bold-moves-box--story {
-    background: #d52027;
-    border-top: 24px solid maroon;
-}
-
-//ENGAGED/MOUSEOVER
-
-.bold-moves-box.bold-moves-box__engaged .bold-moves-box--story p {
+.bold-moves-box--story p {
     display: block;
 }
 
-.bold-moves-box.bold-moves-box__engaged .bold-moves-box--link {
-    text-align: center;
-    color: #F9ADB0;
-    font-weight: normal;
-  }
-
-.bold-moves-box.bold-moves-box__engaged .bold-moves-box--link:hover {
-    color: #fff;
-}
 
 .bold-moves-box.bold-moves-box__engaged .bold-moves-box--title h3 {
     border-bottom: 0 none;
@@ -227,17 +138,9 @@
     transform: rotate(0) translate(0, 0);
     top: 0;
     border-top: none;
-    background: rgba(213, 32, 39, 0.75);
+    background: rgba(0, 0, 0, 0.75);
     left: 0;
     width: 100%;
     right: 0;
     z-index: 2;
-}
-
-.bold-moves-box.bold-moves-box__engaged .bold-moves-box--link .bold-moves-box--engaged-text {
-    display: inline;
-}
-
-.bold-moves-box.bold-moves-box__engaged .bold-moves-box--link .bold-moves-box--disengaged-text {
-    display: none;
 }
